fix: entries being too tall & add: color coding

--- a/src/app/components/entryList/entryItem/entryItem.module.css
+++ b/src/app/components/entryList/entryItem/entryItem.module.css
@@ -1,7 +1,5 @@
 .entryItem{
-    flex-grow: 1;
     height: 50px;
-    background-color: var(--background-light);
     margin: 20px;
     margin-bottom: 5px;
     margin-top: 10px;
